--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
   },
   "dependencies": {
     "framer-motion": "^11.3.28",
+    "lottie-web": "^5.12.2",
+    "nodemailer": "^6.9.14",
     "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "react-lottie": "^1.2.4",
+    "react-lottie-player": "^2.1.0",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
